welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: reassignment to val
  supercase = getCouleurSol() 
            ^